front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: europe-central2-docker.pkg.dev/cat-site-394211/cat-site/cat-site-front:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
