front-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: front
spec:
  type: LoadBalancer
  selector:
    app: front
  ports:
    - name: http
      port: 80
      targetPort: 3000
